@@ -62,8 +62,6 @@ class Zpool(VolumePool):
                 options = options.copy()
                 del options["filesystem"]
 
-            storageobj.megs = self.storageobj.megs
-            storageobj.save()
             zfs = Zfs(storageobj=storageobj, zpool=self, parent=self.storageobj, **options)
             zfs.full_clean()
             zfs.save()
